fix: adjusted scrollbar margin

--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -20,6 +20,7 @@ body {
 /* Scrollbar track style */
 ::-webkit-scrollbar-track {
   background: transparent;
+  margin: 1rem;
 }
 
 /* Scrollbar handle style */
